# PathTracer

./: .gitignore  CMakeLists.txt  Notes.md  README.md
Debug/: CMakeCache.txt  Makefile  PathTracer  PathTracer.cbp  cmake_install.cmake  image.ppm
Release/: CMakeCache.txt  Makefile  PathTracer  PathTracer.cbp  cmake_install.cmake
include/: Camera.h  Circle.h  Color.h  Dielectric.h  Diffused.h  Glossy.h  Image.h  Light.h  Material.h  Object.h  Options.h  Ray.h  Rectangle.cpp  Rectangle.h  Renderer.h  Scene.h  Shiny.h  SimpleCamera.h  SimpleRenderer.h  Sphere.h  Triangle.cpp  Triangle.h  camera.h  debug.h  vec3.h
include/camera/: Camera.h  SimpleCamera.h
include/geometry/: Object.h  Ray.h
include/material/: Dielectric.h  Diffused.h  Glossy.h  Material.h  SpecularDiffused.h
include/renderer/: RealisticRenderer.h  Renderer.h
src/: Camera.cpp  Circle.cpp  Image.cpp  Object.cpp  Ray.cpp  RealisticRenderer.cpp  Rectangle.cpp  Scene.cpp  SimpleCamera.cpp  SimpleRenderer.cpp  Sphere.cpp  Triangle.cpp  main.cpp
